Add jdk.crypto.ec to build. Add export to web using ktor